# ThemeChanger

./: FILE_handler.py  IMAGE_handler.py  PALETTE_handler.py  README.md  main.py  pyproject.toml  requirements.txt  setup.py
image/: cp.jpg~  cp.png~
src/: main.py
src/spam_eggs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tools/: FILE_handler.py  IMAGE_handler.py
